--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio-lucas",
   "private": true,
   "type": "module",
+  "packageManager": "pnpm@10.17.1",
   "scripts": {
     "dev": "vite dev --port 3000",
     "build": "vite build",
@@ -27,10 +28,12 @@
     "@tanstack/router-plugin": "^1.132.0",
     "@tanstack/store": "^0.7.0",
     "highlight.js": "^11.11.1",
+    "i18next": "^25.7.3",
     "lucide-react": "^0.544.0",
     "nitro": "latest",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.5.0",
     "streamdown": "^1.6.5",
     "tailwindcss": "^4.0.6",
     "vite-tsconfig-paths": "^5.1.4",
